--- a/trunk/Obi/Obi/ProjectView/TOCView.de.resx
+++ b/trunk/Obi/Obi/ProjectView/TOCView.de.resx
@@ -130,14 +130,14 @@
     <value>Zeige Inhalt der Sektion</value>
   </data>
   <data name="Context_ShowContentsMenuItem.AccessibleName" xml:space="preserve">
-    <value>Zeige Inhalte</value>
+    <value>Zum Inhalt</value>
   </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="Context_ShowContentsMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>207, 22</value>
   </data>
   <data name="Context_ShowContentsMenuItem.Text" xml:space="preserve">
-    <value>Zei&amp;ge Inhalte</value>
+    <value>&amp;Zum Inhalt</value>
   </data>
   <data name="Context_AddSectionMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>207, 22</value>
@@ -155,31 +155,31 @@
     <value>207, 22</value>
   </data>
   <data name="Context_InsertSectionMenuItem.Text" xml:space="preserve">
-    <value>&amp;Sektion e&amp;infügen</value>
+    <value>Sektion einf&amp;ügen</value>
   </data>
   <data name="Context_MergeWithNextMenuItem.AccessibleName" xml:space="preserve">
-    <value>Mit nächster verbinden</value>
+    <value>Mit folgender verbinden</value>
   </data>
   <data name="Context_MergeWithNextMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>207, 22</value>
   </data>
   <data name="Context_MergeWithNextMenuItem.Text" xml:space="preserve">
-    <value>Mit nächste&amp;r verbinden</value>
+    <value>Mit &amp;folgender verbinden</value>
   </data>
   <data name="Context_MultipleOperationsMenuItem.AccessibleName" xml:space="preserve">
-    <value>Mit mehreren Sektionen arbeiten</value>
+    <value>Mehrere Sektionen ändern</value>
   </data>
   <data name="Context_MultipleOperationsMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>207, 22</value>
   </data>
   <data name="Context_MultipleOperationsMenuItem.Text" xml:space="preserve">
-    <value>Mit mehreren Se&amp;ktionen arbeiten</value>
+    <value>Mehrere Sektionen &amp;ändern</value>
   </data>
   <data name="Context_RenameSectionMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>207, 22</value>
   </data>
   <data name="Context_RenameSectionMenuItem.Text" xml:space="preserve">
-    <value>Sektion &amp;umbenennen</value>
+    <value>Sektio&amp;n umbenennen</value>
   </data>
   <data name="Context_DecreaseSectionLevelMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>207, 22</value>
@@ -197,7 +197,7 @@
     <value>207, 22</value>
   </data>
   <data name="Context_SectionIsUsedMenuItem.Text" xml:space="preserve">
-    <value>Sektion &amp;benutzt</value>
+    <value>Sektion ist &amp;benutzt</value>
   </data>
   <data name="Context_AddBlankPhraseMenuItem.AccessibleName" xml:space="preserve">
     <value>Leere Phrase anfügen</value>
@@ -206,7 +206,7 @@
     <value>207, 22</value>
   </data>
   <data name="Context_AddBlankPhraseMenuItem.Text" xml:space="preserve">
-    <value>Leere P&amp;hrase anfügen</value>
+    <value>Leere &amp;Phrase anfügen</value>
   </data>
   <data name="Context_AddEmptyPagesMenuItem.AccessibleName" xml:space="preserve">
     <value>Leere Seiten anfügen</value>
@@ -215,7 +215,7 @@
     <value>207, 22</value>
   </data>
   <data name="Context_AddEmptyPagesMenuItem.Text" xml:space="preserve">
-    <value>Leere &amp;Seiten anfügen</value>
+    <value>&amp;Leere Seiten anfügen</value>
   </data>
   <data name="toolStripSeparator1.Size" type="System.Drawing.Size, System.Drawing">
     <value>204, 6</value>
@@ -248,13 +248,13 @@
     <value>207, 22</value>
   </data>
   <data name="Context_PasteInsideMenuItem.Text" xml:space="preserve">
-    <value>&amp;Dar&amp;in einfügen</value>
+    <value>Dar&amp;in einfügen</value>
   </data>
   <data name="Context_DeleteMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>207, 22</value>
   </data>
   <data name="Context_DeleteMenuItem.Text" xml:space="preserve">
-    <value>&amp;Löschen</value>
+    <value>L&amp;öschen</value>
   </data>
   <data name="toolStripSeparator2.Size" type="System.Drawing.Size, System.Drawing">
     <value>204, 6</value>
@@ -263,7 +263,7 @@
     <value>207, 22</value>
   </data>
   <data name="Context_PropertiesMenuItem.Text" xml:space="preserve">
-    <value>Ei&amp;nstellungen</value>
+    <value>Ei&amp;genschaften</value>
   </data>
   <data name="mContextMenuStrip.Size" type="System.Drawing.Size, System.Drawing">
     <value>208, 434</value>
