--- a/Obi/Obi/ProjectView/TransportBar.de.resx
+++ b/Obi/Obi/ProjectView/TransportBar.de.resx
@@ -1209,28 +1209,28 @@
     <value>16</value>
   </data>
   <data name="mFastPlayRateCombobox.Items" xml:space="preserve">
-    <value>Schaltfläche</value>
+    <value>1</value>
   </data>
   <data name="mFastPlayRateCombobox.Items1" xml:space="preserve">
-    <value>Schaltfläche</value>
+    <value>1.125</value>
   </data>
   <data name="mFastPlayRateCombobox.Items2" xml:space="preserve">
-    <value>Schaltfläche</value>
+    <value>1.25</value>
   </data>
   <data name="mFastPlayRateCombobox.Items3" xml:space="preserve">
-    <value>Schaltfläche</value>
+    <value>1.5</value>
   </data>
   <data name="mFastPlayRateCombobox.Items4" xml:space="preserve">
-    <value>Schaltfläche</value>
+    <value>1.75</value>
   </data>
   <data name="mFastPlayRateCombobox.Items5" xml:space="preserve">
-    <value>Schaltfläche</value>
+    <value>2</value>
   </data>
   <data name="mFastPlayRateCombobox.Items6" xml:space="preserve">
-    <value>Schaltfläche</value>
+    <value>2.25</value>
   </data>
   <data name="mFastPlayRateCombobox.Items7" xml:space="preserve">
-    <value>Schaltfläche</value>
+    <value>2.5</value>
   </data>
   <data name="mFastPlayRateCombobox.Location" type="System.Drawing.Point, System.Drawing">
     <value>809, 4</value>
