--- a/Obi/Obi/messages.de.resx
+++ b/Obi/Obi/messages.de.resx
@@ -1047,7 +1047,7 @@ Fehlertext: {1}</value>
     <value>Path "{0}" nicht vollständig. Bitte einschließlich Laufwerksbuchstaben komplett eingeben.</value>
   </data>
   <data name="CHMhelp_file_name" xml:space="preserve">
-    <value>Obi Help.chm</value>
+    <value>Obi Help.de.chm</value>
   </data>
   <data name="phrase_detection_progress" xml:space="preserve">
     <value>Phrasenerkennung in Arbeit …</value>
