Update includes changes like focus on Starting index if pages are there or during wrong format of starting index. Also check for Gaps in Pages is done before starting section index.Also there are some code changes.

--- a/Obi/Obi/messages.resx
+++ b/Obi/Obi/messages.resx
@@ -2967,6 +2967,6 @@ Error text: {1}</value>
     <comment>Error message</comment>
   </data>
   <data name="PagesInSectionsDetected" xml:space="preserve">
-    <value>There are some pages in the sections</value>
+    <value>Pages are marked from the starting section index but there are some pages in sections. This functionality cannot be used for sections with pages</value>
   </data>
 </root>
