--- a/Obi/Obi/Dialogs/AutoPageGeneration.resx
+++ b/Obi/Obi/Dialogs/AutoPageGeneration.resx
@@ -118,33 +118,33 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="label1.AutoSize" type="System.Boolean, mscorlib">
+  <data name="m_lbGapsInPages.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
   </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="label1.Location" type="System.Drawing.Point, System.Drawing">
+  <data name="m_lbGapsInPages.Location" type="System.Drawing.Point, System.Drawing">
     <value>12, 38</value>
   </data>
-  <data name="label1.Size" type="System.Drawing.Size, System.Drawing">
+  <data name="m_lbGapsInPages.Size" type="System.Drawing.Size, System.Drawing">
     <value>108, 13</value>
   </data>
-  <data name="label1.TabIndex" type="System.Int32, mscorlib">
+  <data name="m_lbGapsInPages.TabIndex" type="System.Int32, mscorlib">
     <value>0</value>
   </data>
-  <data name="label1.Text" xml:space="preserve">
+  <data name="m_lbGapsInPages.Text" xml:space="preserve">
     <value>&amp;Gaps in pages (mins):</value>
   </data>
-  <data name="&gt;&gt;label1.Name" xml:space="preserve">
-    <value>label1</value>
+  <data name="&gt;&gt;m_lbGapsInPages.Name" xml:space="preserve">
+    <value>m_lbGapsInPages</value>
   </data>
-  <data name="&gt;&gt;label1.Type" xml:space="preserve">
+  <data name="&gt;&gt;m_lbGapsInPages.Type" xml:space="preserve">
     <value>System.Windows.Forms.Label, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="&gt;&gt;label1.Parent" xml:space="preserve">
+  <data name="&gt;&gt;m_lbGapsInPages.Parent" xml:space="preserve">
     <value>$this</value>
   </data>
-  <data name="&gt;&gt;label1.ZOrder" xml:space="preserve">
-    <value>7</value>
+  <data name="&gt;&gt;m_lbGapsInPages.ZOrder" xml:space="preserve">
+    <value>6</value>
   </data>
   <data name="m_txtGapsInPages.Location" type="System.Drawing.Point, System.Drawing">
     <value>140, 35</value>
@@ -165,34 +165,34 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;m_txtGapsInPages.ZOrder" xml:space="preserve">
-    <value>6</value>
+    <value>5</value>
   </data>
-  <data name="label2.AutoSize" type="System.Boolean, mscorlib">
+  <data name="m_lbStartingSectionIndex.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
   </data>
-  <data name="label2.Location" type="System.Drawing.Point, System.Drawing">
+  <data name="m_lbStartingSectionIndex.Location" type="System.Drawing.Point, System.Drawing">
     <value>12, 80</value>
   </data>
-  <data name="label2.Size" type="System.Drawing.Size, System.Drawing">
+  <data name="m_lbStartingSectionIndex.Size" type="System.Drawing.Size, System.Drawing">
     <value>111, 13</value>
   </data>
-  <data name="label2.TabIndex" type="System.Int32, mscorlib">
+  <data name="m_lbStartingSectionIndex.TabIndex" type="System.Int32, mscorlib">
     <value>2</value>
   </data>
-  <data name="label2.Text" xml:space="preserve">
+  <data name="m_lbStartingSectionIndex.Text" xml:space="preserve">
     <value>Starting section &amp;index:</value>
   </data>
-  <data name="&gt;&gt;label2.Name" xml:space="preserve">
-    <value>label2</value>
+  <data name="&gt;&gt;m_lbStartingSectionIndex.Name" xml:space="preserve">
+    <value>m_lbStartingSectionIndex</value>
   </data>
-  <data name="&gt;&gt;label2.Type" xml:space="preserve">
+  <data name="&gt;&gt;m_lbStartingSectionIndex.Type" xml:space="preserve">
     <value>System.Windows.Forms.Label, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="&gt;&gt;label2.Parent" xml:space="preserve">
+  <data name="&gt;&gt;m_lbStartingSectionIndex.Parent" xml:space="preserve">
     <value>$this</value>
   </data>
-  <data name="&gt;&gt;label2.ZOrder" xml:space="preserve">
-    <value>5</value>
+  <data name="&gt;&gt;m_lbStartingSectionIndex.ZOrder" xml:space="preserve">
+    <value>4</value>
   </data>
   <data name="m_cbStartingSectionIndex.Location" type="System.Drawing.Point, System.Drawing">
     <value>140, 80</value>
@@ -213,22 +213,22 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;m_cbStartingSectionIndex.ZOrder" xml:space="preserve">
-    <value>4</value>
+    <value>3</value>
   </data>
   <data name="m_rbGenerateTTS.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
   </data>
   <data name="m_rbGenerateTTS.Location" type="System.Drawing.Point, System.Drawing">
-    <value>15, 141</value>
+    <value>6, 28</value>
   </data>
   <data name="m_rbGenerateTTS.Size" type="System.Drawing.Size, System.Drawing">
-    <value>212, 17</value>
+    <value>160, 17</value>
   </data>
   <data name="m_rbGenerateTTS.TabIndex" type="System.Int32, mscorlib">
-    <value>4</value>
+    <value>5</value>
   </data>
   <data name="m_rbGenerateTTS.Text" xml:space="preserve">
-    <value>Generate synthetic &amp;speech for page no.</value>
+    <value>Pages with synthetic &amp;speech</value>
   </data>
   <data name="&gt;&gt;m_rbGenerateTTS.Name" xml:space="preserve">
     <value>m_rbGenerateTTS</value>
@@ -237,25 +237,25 @@
     <value>System.Windows.Forms.RadioButton, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="&gt;&gt;m_rbGenerateTTS.Parent" xml:space="preserve">
-    <value>$this</value>
+    <value>m_gpPages</value>
   </data>
   <data name="&gt;&gt;m_rbGenerateTTS.ZOrder" xml:space="preserve">
-    <value>3</value>
+    <value>0</value>
   </data>
   <data name="m_rbKeepEmptyPages.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
   </data>
   <data name="m_rbKeepEmptyPages.Location" type="System.Drawing.Point, System.Drawing">
-    <value>15, 183</value>
+    <value>6, 64</value>
   </data>
   <data name="m_rbKeepEmptyPages.Size" type="System.Drawing.Size, System.Drawing">
-    <value>151, 17</value>
+    <value>113, 17</value>
   </data>
   <data name="m_rbKeepEmptyPages.TabIndex" type="System.Int32, mscorlib">
-    <value>5</value>
+    <value>6</value>
   </data>
   <data name="m_rbKeepEmptyPages.Text" xml:space="preserve">
-    <value>&amp;Keep pages  with no audio</value>
+    <value>Pages with si&amp;lence</value>
   </data>
   <data name="&gt;&gt;m_rbKeepEmptyPages.Name" xml:space="preserve">
     <value>m_rbKeepEmptyPages</value>
@@ -264,10 +264,10 @@
     <value>System.Windows.Forms.RadioButton, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="&gt;&gt;m_rbKeepEmptyPages.Parent" xml:space="preserve">
-    <value>$this</value>
+    <value>m_gpPages</value>
   </data>
   <data name="&gt;&gt;m_rbKeepEmptyPages.ZOrder" xml:space="preserve">
-    <value>2</value>
+    <value>1</value>
   </data>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="m_btnOk.FlatStyle" type="System.Windows.Forms.FlatStyle, System.Windows.Forms">
@@ -283,7 +283,7 @@
     <value>88, 29</value>
   </data>
   <data name="m_btnOk.TabIndex" type="System.Int32, mscorlib">
-    <value>6</value>
+    <value>7</value>
   </data>
   <data name="m_btnOk.Text" xml:space="preserve">
     <value>&amp;OK</value>
@@ -298,7 +298,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;m_btnOk.ZOrder" xml:space="preserve">
-    <value>1</value>
+    <value>2</value>
   </data>
   <data name="m_btnCancel.FlatStyle" type="System.Windows.Forms.FlatStyle, System.Windows.Forms">
     <value>Flat</value>
@@ -313,7 +313,7 @@
     <value>88, 29</value>
   </data>
   <data name="m_btnCancel.TabIndex" type="System.Int32, mscorlib">
-    <value>7</value>
+    <value>8</value>
   </data>
   <data name="m_btnCancel.Text" xml:space="preserve">
     <value>&amp;Cancel</value>
@@ -328,6 +328,27 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;m_btnCancel.ZOrder" xml:space="preserve">
+    <value>1</value>
+  </data>
+  <data name="m_gpPages.Location" type="System.Drawing.Point, System.Drawing">
+    <value>15, 114</value>
+  </data>
+  <data name="m_gpPages.Size" type="System.Drawing.Size, System.Drawing">
+    <value>225, 100</value>
+  </data>
+  <data name="m_gpPages.TabIndex" type="System.Int32, mscorlib">
+    <value>4</value>
+  </data>
+  <data name="&gt;&gt;m_gpPages.Name" xml:space="preserve">
+    <value>m_gpPages</value>
+  </data>
+  <data name="&gt;&gt;m_gpPages.Type" xml:space="preserve">
+    <value>System.Windows.Forms.GroupBox, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;m_gpPages.Parent" xml:space="preserve">
+    <value>$this</value>
+  </data>
+  <data name="&gt;&gt;m_gpPages.ZOrder" xml:space="preserve">
     <value>0</value>
   </data>
   <metadata name="$this.Localizable" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
